# DirectusPyWrapper

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  tests.py
DirectusPyWrapper/: __init__.py  _and.py  _or.py  aggregation_operators.py  directus.py  directus_request.py  directus_response.py  filter.py  filter_base.py  logical.py  logical_operators.py  models.py  operators.py
