[project]
name = "DirectusPyWrapper"
version = "0.0.1"
description = "A python wrapper for Directus API"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["directus", "wrapper", "api"]
authors = [
    { name = "Panos Stavrianos" }
]
maintainers = [
    { name = "Panos Stavrianos" }
]

dependencies = [
    "python-dotenv~=0.21.0",
    "rich~=12.6.0",
    "requests~=2.28.1",
    "json_fix~=0.5.1"
]

[project.optional-dependencies]
test = [
    "rich~=12.6.0",
]

[project.urls]
repository = "https://github.com/panos-stavrianos/DirectusPyWrapper"

[tool.setuptools]
py-modules = []